...
      appBar: AppBar(
        leading: BackButton(color: Colors.white),
        title:
            _isSearching
                ? SearchField(_searchController, _filterItems)
                : const Text(
                  "Dashboard",
                  style: TextStyle(
                    color: Colors.white,
                    fontWeight: FontWeight.bold,
                  ),
                ),
        backgroundColor: Colors.blueGrey.shade900,
...
